{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 33,
  "lineage": "5c030cd1-13a4-db39-7c22-8fc025c0a2e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DEV",
      "each": "list",
      "provider": "provider.aws.us-east-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:036526039637:instance/i-01a3d70a974b8cd85",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a3d70a974b8cd85",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "monitoring": false,
            "primary_network_interface_id": "eni-0321f77133077fc5f",
            "private_dns": "ip-172-31-89-137.ec2.internal",
            "private_ip": "172.31.89.137",
            "public_dns": "ec2-54-145-110-227.compute-1.amazonaws.com",
            "public_ip": "54.145.110.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04b3a7a0bb000c80f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "libera_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-26c39808",
            "tags": {
              "Name": "DEV0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010610234e15f40b8"
            ]
          },
          "dependencies": [
            "aws_security_group.libera_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:036526039637:instance/i-04840b12676446c03",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04840b12676446c03",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "monitoring": false,
            "primary_network_interface_id": "eni-09cb7d8da7f96b61f",
            "private_dns": "ip-172-31-94-243.ec2.internal",
            "private_ip": "172.31.94.243",
            "public_dns": "ec2-18-212-193-225.compute-1.amazonaws.com",
            "public_ip": "18.212.193.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cbb375ce3e4df30c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "libera_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-26c39808",
            "tags": {
              "Name": "DEV1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010610234e15f40b8"
            ]
          },
          "dependencies": [
            "aws_security_group.libera_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c322300a1dd5dc79",
            "arn": "arn:aws:ec2:us-east-1:036526039637:instance/i-0c3b1e2f090eafa48",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3b1e2f090eafa48",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "monitoring": false,
            "primary_network_interface_id": "eni-0198202fdc5c72299",
            "private_dns": "ip-172-31-89-26.ec2.internal",
            "private_ip": "172.31.89.26",
            "public_dns": "ec2-18-212-36-198.compute-1.amazonaws.com",
            "public_ip": "18.212.36.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07cad3403d6d5109e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "libera_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-26c39808",
            "tags": {
              "Name": "DEV2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010610234e15f40b8"
            ]
          },
          "dependencies": [
            "aws_security_group.libera_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "libera_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036526039637:security-group/sg-09a95b96430a0448a",
            "description": "libera_http",
            "egress": [],
            "id": "sg-09a95b96430a0448a",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.183.198.226/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "libera_http",
            "name_prefix": null,
            "owner_id": "036526039637",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http"
            },
            "timeouts": null,
            "vpc_id": "vpc-c84129b2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "libera_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036526039637:security-group/sg-05da59eae4af5cd29",
            "description": "libera_https",
            "egress": [],
            "id": "sg-05da59eae4af5cd29",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.183.198.226/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "libera_https",
            "name_prefix": null,
            "owner_id": "036526039637",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "https"
            },
            "timeouts": null,
            "vpc_id": "vpc-c84129b2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "libera_oracle-us-east-1",
      "provider": "provider.aws.us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036526039637:security-group/sg-06c953357a0597752",
            "description": "libera_oracle_db",
            "egress": [],
            "id": "sg-06c953357a0597752",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.183.198.226/32"
                ],
                "description": "",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1521
              }
            ],
            "name": "libera_oracle_db",
            "name_prefix": null,
            "owner_id": "036526039637",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "oracle_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-c84129b2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "libera_ssh",
      "provider": "provider.aws.us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:036526039637:security-group/sg-010610234e15f40b8",
            "description": "libera_ssh",
            "egress": [],
            "id": "sg-010610234e15f40b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.183.198.226/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "libera_ssh",
            "name_prefix": null,
            "owner_id": "036526039637",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-c84129b2"
          }
        }
      ]
    }
  ]
}